# Hackathon-2_phase-V

./: .gitignore  .gitmodules  .replit  PROJECT_REVIEW.md  README.md  TODO.md  backend-configmap.yaml  backend-workflow.yml  build-images.bat  build_images.sh  dapr-config.yaml  deployment_instructions.md  fix_db.py  frontend-workflow.yml  kafka-pubsub-component.yaml  kafka-single.yaml  kafka-zookeeper.yaml  mock-kafka.yaml  notification-service-corrected.yaml  notification-service.yaml  package-lock.json  package.json  postgres-deployment.yaml  pubsub-redis-component.yaml  redis.yaml  replit_readme.md  simple_event_queue.py  simple_test.py  temp_inspect.py  test_agent_functionality.py  test_debug.db  test_edit_commands.py  test_edit_functionality.py  todo_app.db  vercel_readme.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  check_db.py  list_routes.py  model_list.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: dcfb57b0c4d1_add_due_date_and_priority_fields_to_.py
backend/src/: exceptions.py  main.py
backend/src/agents/: todo_agent.py
backend/src/api/: __init__.py  deps.py  main.py
backend/src/config/: database.py
backend/src/database/: __init__.py  session.py
backend/src/models/: conversation.py  event_log.py  message.py  notification.py  task.py  user.py
backend/src/services/: __init__.py  auth.py  conversation_service.py  event_service.py  message_service.py  notification_service.py  recurring_task_service.py  reminder_service.py  task_service.py
backend/src/tools/: task_tools.py
(+101 files in other folders)
